k8s-manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: devops-roadmap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: mukesh2306/devops-roadmap-frontend:latest
        imagePullPolicy: Always
        command: ["/bin/sh", "-c"]
        args:
          - |
            find /usr/share/nginx/html -type f -name "*.js" -exec sed -i 's|http://localhost:3001|https://devops-roadmap-api.mukeshdev.online|g' {} +
            nginx -g 'daemon off;'
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: devops-roadmap
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
